--- a/wp-rest-api-react/package.json
+++ b/wp-rest-api-react/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://rishabhp.in/portfolio/",
+  "homepage": "https://rishabhp.in",
   "name": "wp-rest-api-react",
   "version": "1.0.0",
   "private": true,
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.1.1",
     "react-router-hash-link": "^2.4.3",
